agregamos conoce como

--- a/conoceComo.html
+++ b/conoceComo.html
@@ -37,17 +37,91 @@
 
     <main class="mainConoceComo">
         <section class="row ">
-            <article class="col s12 m3 ">
+            <article class="col s12 m4 ">
                 <img src="img/tpsMaterial.jpg" alt="Tps - Almidon" class="responsive-img">
             </article>
-            <article class=" col s12 m9 ">
-                <h3><span class="tituloMaterial ">¿Como estan hechos nuestros productos?</span></h3>
-                <h5 class=" ">Nuestros envases hechos con materiales termopl&aacute;sticos a base de almidon procedente de
-                    <span class="Conocebold "> or&iacute;genes naturales</span>. Tambien conocidos como
-                    <span>TPS</span>
-                </h5>
+            <article class="col s12 m8">
+                <p><span class="tituloMaterial ">¿Como estan hechos nuestros productos?</span></p>
+                <p class="descripcion green">Nuestros envases hechos con materiales termopl&aacute;sticos a base de almidon procedente de
+                    <span class="Conocebold"> or&iacute;genes naturales</span>. Tambien conocidos como
+                    <span class="Conocebold">TPS</span>.
+                </p>
             </article>
+        </section>
+        <section class="">
+            <h3 class="ventajas"><span>Ventajas</span></h3>
+            <div class="" style="margin-top: 3%">
+                <div class="section">
+                    <div class="row ventajasInfo">
+                        <div class="col s12 m4 green m-2">
+                            <div class="center">
+                                <i class="fas fa-balance-scale"></i>
+                            </div>
+                            <p>Presenta <span class="ventajasBold">poca estabilidad</span> cuando las condiciones de humedad son muy altas
+                            </p>
+                        </div>
+                        <div class="col s12 m4 green m-2">
+                            <div class="center">
+                                <i class="fas fa-box-open "></i>
+                            </div>
+                            <p>Tiene buenas propiedades de <span class="ventajasBold">sellabilidad</span> para la conservacion de la comida</p>
+                        </div>
+                        <div class="col s12 m4 green m-2">
+                            <div class="center">
+                                <i class="fas fa-coins "></i>
+                            </div>
+                            <p>Los productos son <span class="ventajasBold">baratos</span>, ya que su materia prima, el maiz y trigo, lo son</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h3 class="ventajas"><span>Diferencias con el plastico</span></h3>
+            <h5 class="p-2"><span class="bordeH5">Descomposicion</span></h5>
+            <article>
+                <div class="contenedor">
+                    <p class="textoVerde green">Tps</p>
+                    <i class="fas fa-arrow-right"></i>
+                    <p class="textoGris grey lighten-1">6 a 12 meses</p>
 
+                </div>
+                <hr class="hr-desco">
+                <div class="contenedor">
+                    <p class="textoVerde green">Papel</p>
+                    <i class="fas fa-arrow-right"></i>
+                    <p class="textoGris grey lighten-1">1 año</p>
+
+                </div>
+                <hr class="hr-desco">
+                <div class="contenedor">
+                    <p class="textoVerde green">Bolsa de <br> plastico</p>
+                    <i class="fas fa-arrow-right"></i>
+                    <p class="textoGris grey lighten-1">400 años</p>
+
+                </div>
+                <hr class="hr-desco">
+                <div class="contenedor">
+                    <p class="textoVerde green">Botella de <br>plastico</p>
+                    <i class="fas fa-arrow-right"></i>
+                    <p class="textoGris grey lighten-1">100 a <br>1000 años</p>
+
+                </div>
+                <hr class="hr-desco">
+                <div class="contenedor">
+                    <p class="textoVerde green">Vasos <br>desechables</p>
+                    <i class="fas fa-arrow-right"></i>
+                    <p class="textoGris grey lighten-1">1000 años</p>
+
+                </div>
+                <hr class="hr-desco">
+                <div class="contenedor">
+                    <p class="textoVerde green">Botella de<br> vidrio</p>
+                    <i class="fas fa-arrow-right"></i>
+                    <p class="textoGris grey lighten-1">4000 años</p>
+
+                </div>
+            </article>
         </section>
     </main>
 
