arregle formulario abril

--- a/contacto.html
+++ b/contacto.html
@@ -69,17 +69,17 @@
 
                             <div class="provincia">
                                 <label for="provincia"> PROVINCIA <br> </label>
-                                <input type="text" name="provincia" id="provincia"> <br> <br>
+                                <input type="text" name="provincia" id="provincia" required> <br> <br>
                             </div>
 
                             <div class="email">
                                 <label for="email"> EMAIL <br> </label>
-                                <input type="text" name="email" id="email" required> <br> <br>
+                                <input type="email" name="email" id="email" required> <br> <br>
                             </div>
 
                             <div class="tel">
                                 <label for="telefono"> TELÉFONO <br> </label>
-                                <input type="text" name="telefono" id="telefono"> <br> <br>
+                                <input type="text" name="telefono" id="telefono" required> <br> <br>
                             </div>
 
                             <div class="consulta">
@@ -89,7 +89,7 @@
                             </div>
 
                             <div class="row center">
-                                <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo">ENVIAR</a>
+                                <button type="submit" id="download-button" class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo">ENVIAR</a>
                             </div>
 
                         </form>
