--- a/contacto.html
+++ b/contacto.html
@@ -110,13 +110,14 @@
 
                                 <div class="consulta">
                                     <label for="consulta"> CONSULTA<br> </label>
-                                    <textarea name="consulta" id="consulta" cols="50" rows="100" required></textarea> <br>
+                                    <textarea name="consulta" id="consulta" cols="50" rows="100" required></textarea>
+                                    <br>
                                     <br>
                                 </div>
 
                                 <div class="row center">
                                     <button type="submit" id="download-button" class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo">ENVIAR</a>
-                            </div>
+                                </div>
 
                         </form>
 
@@ -143,16 +144,20 @@
                     <h5 class="white-text">Redes Sociales</h5>
                     <ul>
                         <li>
-                            <i class="fab fa-facebook" style="margin-right: 5px"></i><a class="white-text" href="#!">Facebook</a>
+                            <i class="fab fa-facebook" style="margin-right: 5px"></i><a class="white-text"
+                                href="#!">Facebook</a>
                         </li>
                         <li>
-                            <i class="fab fa-instagram" style="margin-right: 5px"></i><a class="white-text" href="#!">Instagram</a>
+                            <i class="fab fa-instagram" style="margin-right: 5px"></i><a class="white-text"
+                                href="#!">Instagram</a>
                         </li>
                         <li>
-                            <i class="fab fa-twitter" style="margin-right: 5px"></i><a class="white-text" href="#!">Twitter</a>
+                            <i class="fab fa-twitter" style="margin-right: 5px"></i><a class="white-text"
+                                href="#!">Twitter</a>
                         </li>
                         <li>
-                            <i class="fab fa-pinterest" style="margin-right: 5px"></i><a class="white-text" href="#!">Pinterest</a>
+                            <i class="fab fa-pinterest" style="margin-right: 5px"></i><a class="white-text"
+                                href="#!">Pinterest</a>
                         </li>
                     </ul>
                 </div>
