--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                     <li><a class="a_menu" href="contacto.html">Contacto</a></li>
                     <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                 </ul>
-                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="black-text material-icons">menu</i></a>
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+                        class="black-text material-icons">menu</i></a>
             </div>
         </nav>
     </header>
@@ -48,7 +49,8 @@
                         </h5>
                     </div>
                     <div class="row center">
-                        <a href="conoceComo.html" id="download-button" class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo">Conoc&eacute; como...</a>
+                        <a href="conoceComo.html" id="download-button" class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo">Conoc&eacute;
+                            como...</a>
                     </div>
                     <br /><br />
                 </div>
