--- a/sucursales.html
+++ b/sucursales.html
@@ -29,7 +29,8 @@
                     <li><a class="a_menu" href="contacto.html">Contacto</a></li>
                     <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                 </ul>
-                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="black-text material-icons">menu</i></a>
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+                        class="black-text material-icons">menu</i></a>
             </div>
         </nav>
     </header>
