lijeros cambios en conoce como

--- a/conoceComo.html
+++ b/conoceComo.html
@@ -49,35 +49,49 @@
             </article>
         </section>
         <section class="">
-            <h3 class="ventajas"><span>Ventajas</span></h3>
-            <div class="" style="margin-top: 3%">
+            <h3 class="ventajas">VENTAJAS</h3>
+            <div class="container" style="margin-top: 3%">
                 <div class="section">
-                    <div class="row ventajasInfo">
-                        <div class="col s12 m4 green m-2">
-                            <div class="center">
-                                <i class="fas fa-balance-scale"></i>
+                    <div class="row">
+                        <div class="col s12 m4">
+                            <div class="icon-block">
+                                <h2 class="center green-text">
+                                    <a href="">
+                                        <i class="fas fa-balance-scale icono"></i>
+                                    </a>
+                                </h2>
+                                <h5 class="center">Presenta <span class="ventajasBold">poca estabilidad</span> cuando las condiciones de humedad son muy altas</h5>
                             </div>
-                            <p>Presenta <span class="ventajasBold">poca estabilidad</span> cuando las condiciones de humedad son muy altas
-                            </p>
                         </div>
-                        <div class="col s12 m4 green m-2">
-                            <div class="center">
-                                <i class="fas fa-box-open "></i>
+
+                        <div class="col s12 m4">
+                            <div class="icon-block">
+                                <h2 class="center green-text">
+                                    <a href="">
+                                        <i class="fas fa-box-open icono"></i>
+                                    </a>
+                                </h2>
+                                <h5 class="center">Tiene buenas propiedades de <span class="ventajasBold">sellabilidad</span> para la conservacion de la comida</h5>
                             </div>
-                            <p>Tiene buenas propiedades de <span class="ventajasBold">sellabilidad</span> para la conservacion de la comida</p>
                         </div>
-                        <div class="col s12 m4 green m-2">
-                            <div class="center">
-                                <i class="fas fa-coins "></i>
+
+                        <div class="col s12 m4">
+                            <div class="icon-block">
+                                <h2 class="center green-text">
+                                    <a href="">
+                                        <i class="fas fa-coins icono"></i>
+                                    </a>
+                                </h2>
+                                <h5 class="center">Los productos son <span class="ventajasBold">baratos</span>, ya que su materia prima, el maiz y trigo, lo son</h5>
                             </div>
-                            <p>Los productos son <span class="ventajasBold">baratos</span>, ya que su materia prima, el maiz y trigo, lo son</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <section>
-            <h3 class="ventajas"><span>Diferencias con el plastico</span></h3>
+            <h3 class="ventajas">Diferencias con el plastico</h3>
             <h5 class="p-2"><span class="bordeH5">Descomposicion</span></h5>
             <article>
                 <div class="contenedor">
