Cambios en productos

--- a/productos.html
+++ b/productos.html
@@ -66,10 +66,10 @@
 
 
     </div>
-    <section id="filtros" class="green white-text center-align">
+    <section id="filtros" class="white green-text center-align">
         <div class="divFiltros"></div>
         <div class="row">
-            <div id="todosLosProductos" class="col s1 ">Todos los productos</div>
+            <div id="todosLosProductos" class="col s1 ">Filtros</div>
         </div>
 
         <div class="row">
@@ -100,9 +100,9 @@
             <div id="precio" class="col s1 ">Precio</div>
         </div>
         <div id="rango" class="row">
-            <div id="precioMin" class="col s1 green white-text"><input id="inputMin" class="green white-text" placeholder="Minimo" type="number"></div>
+            <div id="precioMin" class="col s1  white-text"><input id="inputMin" class=" white-text" placeholder="Minimo" type="number"></div>
             <div id="guion" class="col s2 green-text">-</div>
-            <div id="precioMax" class=" col s1 green white-text"><input id="inputMax" class="green white-text" placeholder="Maximo" type="number"></div>
+            <div id="precioMax" class=" col s1  white-text"><input id="inputMax" class=" white-text" placeholder="Maximo" type="number"></div>
 
         </div>
 
@@ -118,7 +118,7 @@
                 <div class="card">
                     <div class="card-image">
                         <img class="center-block fotoCatalogo" src="img/bowlsimple.jpg">
-                        <a class="btn-floating halfway-fab waves-effect waves-light green"><i class="material-icons">add_shopping_cart</i></a>
+                         <a class="btn-floating halfway-fab waves-effect waves-light green"><i class="material-icons">add_shopping_cart</i></a>
                     </div>
                     <div class="card-content">
                         <h5 class="">Bowl simple <span class="green-text right">$50</span></h5>
