--- a/contacto.html
+++ b/contacto.html
@@ -4,11 +4,15 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>BIO MOUNTAIN - Contacto</title>
+    <title>Contacto - BIO MOUNTAIN</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/estilos.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="favicon-32x32" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="favicon-16x16" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -40,18 +44,18 @@
             <div class="section no-pad-bot">
                 <div class="container">
                     <br /><br />
-                    <h1 class="header center black-text text-lighten-2 titulo_Slider">
+                    <h1 class="header center text-lighten-2 titulo_Slider">
                         ¡CONTACTANOS!
                     </h1>
                     <div class="row center">
-                        <h5 class="header col s12 light black-text">
+                        <h5 class="header col s12 light">
                             Responderemos en las próximas 24 horas
                         </h5>
                     </div>
                 </div>
             </div>
             <div class="parallax">
-                <img src="img/fotoContacto.jpg" alt="Unsplashed background img 1" />
+                <img src="img/fotoCont3.png" alt="Unsplashed background img 1" />
             </div>
         </div>
 
@@ -70,7 +74,7 @@
 
                         <form action="#" name="form">
                             <div class="row">
-                                <div class="col s6">
+                                <div class="col s12 m6">
                                     <div class="icon-block">
                                         <div class="nombre">
                                             <label for="nombre"> NOMBRE <br> </label>
@@ -79,7 +83,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col s6">
+                                <div class="col s12 m6">
                                     <div class="icon-block">
                                         <div class="provincia">
                                             <label for="provincia"> PROVINCIA <br> </label>
@@ -90,7 +94,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="col s6">
+                                <div class="col s12 m6">
                                     <div class="icon-block">
                                         <div class="tel">
                                             <label for="telefono">TELÉFONO <br> </label>
@@ -99,7 +103,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col s6">
+                                <div class="col s12 m6">
                                     <div class="icon-block">
                                         <div class="email">
                                             <label for="email"> EMAIL <br> </label>
@@ -129,41 +133,38 @@
         </div>
     </main>
 
-    <footer class="page-footer green">
+    <footer class="page-footer green center">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
-                    <img src="img/logoinvertido.png" class="logo_footer" />
-                    <h5 class="white-text">BIO MOUNTAIN</h5>
-                    <br />
-                    <p class="grey-text text-lighten-4" style="font-size: 1em">
-                        Tambien podes encontrarnos en nuestras redes sociales
-                    </p>
+                <div class="col l2 s12">
+                    <div class="imgFooter">
+                    <img src="img/logoBlanco.png" class="logo_footer"/>
                 </div>
-                <div class="col l3 s12 right">
-                    <h5 class="white-text">Redes Sociales</h5>
+                </div>
+
+                <div class="col l7 s12 ">
+                    <h5 class="white-text">Menú</h5>
                     <ul>
-                        <li>
-                            <i class="fab fa-facebook" style="margin-right: 5px"></i><a class="white-text"
-                                href="#!">Facebook</a>
-                        </li>
-                        <li>
-                            <i class="fab fa-instagram" style="margin-right: 5px"></i><a class="white-text"
-                                href="#!">Instagram</a>
-                        </li>
-                        <li>
-                            <i class="fab fa-twitter" style="margin-right: 5px"></i><a class="white-text"
-                                href="#!">Twitter</a>
-                        </li>
-                        <li>
-                            <i class="fab fa-pinterest" style="margin-right: 5px"></i><a class="white-text"
-                                href="#!">Pinterest</a>
-                        </li>
+                        <li><a class="a_menu" href="index.html">Inicio</a></li>
+                        <li><a class="a_menu" href="productos.html">Productos</a></li>
+                        <li class="active"><a class="a_menu" href="contacto.html">Contacto</a></li>
+                        <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                     </ul>
+                </div>
+
+                <div class="col l3 s12 right redes-footer">
+                        <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
+                        <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
+                        <a href="https://www.twitter.com/" class="fab fa-twitter"></a>
+                        <a href="https://www.pinterest.com/" class="fab fa-pinterest-p"></a>
                 </div>
             </div>
         </div>
-        <div class="footer-copyright"></div>
+        <div class="footer-copyright">
+            <p>
+                © Bio Mountain
+            </p>
+        </div>
     </footer>
 
     <!--  Scripts-->
