--- a/sucursales.html
+++ b/sucursales.html
@@ -69,7 +69,7 @@
         <div class="contenedorAbajo">
             <div class="contenedor-izquierda">
                 <div class="container section">
-                    <h2 class="green-text">¿Donde estamos?</h2>
+                    <h2 class="green-text">¿Dónde estamos?</h2>
                     <div class="row">
                         <div class="col s4 m10">
 
@@ -80,8 +80,8 @@
                                 </div>
                                 <div class="card-content">
 
-                                    <p>Podés encontrar nuestros locales en diferentes provincias para que disfrutes la experiencia de los productos de Bio Mountain en todo el país. Tenemos sucursales en Ciudad Autónoma de Buenos Aires, Santa Cruz, Rio Negro,
-                                        Mendoza, Neuquen, Salta, Jujuy.
+                                    <p>Podés encontrar nuestros locales en diferentes provincias para que disfrutes la experiencia de los productos de Bio Mountain en todo el país. Tenemos sucursales en Ciudad Autónoma de Buenos Aires, Jujuy, Chubut, Mendoza,
+                                        Neuquen, Salta.
                                     </p>
 
                                 </div>
@@ -104,8 +104,16 @@
 
             <div class="divMapa">
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d410.5526966884861!2d-58.4459856!3d-34.5934998!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5f680cb2679%3A0x8b0a61b3eb088c0!2sHumboldt%20590%2C%20C1414%20CSL%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1607042178281!5m2!1ses-419!2sar"
-                    width="650" height="750" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <a id="bsas" class="waves-effect waves-light btn green" onclick="mostrarMapaBuenosAires()">CABA</a>
+                <a id="jujuy" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaJujuy()">Jujuy</a>
+                <a id="chubut" class=" waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaChubut()">Chubut</a>
+                <a id="mendoza" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaMendoza()">Mendoza</a>
+                <a id="neuquen" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaNeuquen()">Neuquen</a>
+                <a id="salta" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaSalta()">Salta</a>
+
+
+                <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31246.984632601936!2d-58.45746332248552!3d-34.593168524128124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5f680cb2679%3A0x8b0a61b3eb088c0!2sHumboldt%20590%2C%20C1414%20CSL%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1607307750096!5m2!1ses-419!2sar"
+                    width="630" height="665" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
             </div>
 
@@ -155,8 +163,8 @@
     </footer>
 
     <!--  Scripts-->
-    <script src="js/materialize.min.js"></script>
-    <script src="js/materialize.js"></script>
+    <script src="js/materialize.min.js "></script>
+    <script src="js/materialize.js "></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             var elems = document.querySelectorAll('.carousel');
@@ -166,6 +174,7 @@
             });
         });
     </script>
+    <script src="js/script.js "></script>
 
 </body>
 
