agregamos footer nuuevo en la pagina sucursales

--- a/sucursales.html
+++ b/sucursales.html
@@ -127,39 +127,38 @@
 
     </main>
 
-    <footer class="page-footer green ">
-        <div class="container ">
-            <div class="row ">
-                <div class="col l6 s12 ">
-                    <img src="img/logoinvertido.png " class="logo_footer " />
-                    <h5 class="white-text ">BIO MOUNTAIN</h5>
-                    <br />
-                    <p class="grey-text text-lighten-4 " style="font-size: 1em ">
-                        Tambien podes encontrarnos en nuestras redes sociales
-                    </p>
+    <footer class="page-footer green center">
+        <div class="container">
+            <div class="row">
+                <div class="col l2 s12">
+                    <div class="imgFooter">
+                        <img src="img/logoBlanco.png" class="logo_footer" />
+                    </div>
                 </div>
-                <div class="col l3 s12 right ">
-                    <h5 class="white-text ">Redes Sociales</h5>
-                    <ul>
-                        <li>
-                            <i class="fab fa-facebook " style="margin-right: 5px "></i><a class="white-text " href="#! ">Facebook</a>
-                        </li>
-                        <li>
-                            <i class="fab fa-instagram " style="margin-right: 5px "></i><a class="white-text " href="#! ">Instagram</a>
-                        </li>
-                        <li>
-                            <i class="fab fa-twitter " style="margin-right: 5px "></i><a class="white-text " href="#! ">Twitter</a>
-                        </li>
-                        <li>
-                            <i class="fab fa-pinterest " style="margin-right: 5px "></i><a class="white-text " href="#! ">Pinterest</a>
 
-                        </li>
+                <div class="col l7 s12 ">
+                    <h5 class="white-text">Menú</h5>
+                    <ul>
+                        <li><a class="a_menu" href="index.html">Inicio</a></li>
+                        <li><a class="a_menu" href="productos.html">Productos</a></li>
+                        <li class="active"><a class="a_menu" href="contacto.html">Contacto</a></li>
+                        <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                     </ul>
+                </div>
+
+                <div class="col l3 s12 right redes-footer">
+                    <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
+                    <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
+                    <a href="https://www.twitter.com/" class="fab fa-twitter"></a>
+                    <a href="https://www.pinterest.com/" class="fab fa-pinterest-p"></a>
                 </div>
             </div>
         </div>
-        <div class="footer-copyright "></div>
-
+        <div class="footer-copyright">
+            <p>
+                © Bio Mountain
+            </p>
+        </div>
     </footer>
 
     <!--  Scripts-->
