terminamos el carrito

--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -50,66 +50,120 @@
             </div>
             <article>
                 <div class="row">
-                    <div class="col s4 m2">
+                    <div class="col s3 m2">
                         <img src="img/ovalbowl.jpg" alt="" class="circle responsive-img">
                     </div>
-                    <div class="col s8 m10">
+                    <div class="col s9 m10">
                         <div class="col s12 m6">
-                            <h3>Bowl simple</h3>
+                            <h4>Bowl simple</h4>
                             <h6>Bowl simple para comida.</h6>
                         </div>
                         <div class="col s6 m3 mt-1-carrito">
-                            <h5><i class="small material-icons green-text">remove</i> <span class="small-contador">2</span> <i class="small material-icons green-text">add</i>
-                            </h5>
-                        </div>
-                        <div class="col s6 m3">
-                            <h3 class="green-text">$100</h3>
+                            <a class="boton-contador btn-floating btn-small waves-effect waves-light green mc-1">
+                                <i class="material-icons">remove</i>
+                            </a>
 
+                            <span class="small-contador mc-1">2</span>
+
+                            <a class="boton-contador btn-floating btn-small waves-effect waves-light green mc-1">
+                                <i class="material-icons">add</i>
+                            </a>
+                        </div>
+                        <div class="col s6 m3 mt-1-carrito">
+                            <h4 class="">$100</h4>
+
+                        </div>
+                    </div>
+
+                </div>
+                <hr>
+
+                <div class="row">
+                    <div class="col s3 m2">
+                        <img src="img/bandejadoble.jpg" alt="" class="circle responsive-img">
+                    </div>
+                    <div class="col s9 m10">
+                        <div class="col s12 m6">
+                            <h4>Bandeja doble</h4>
+                            <h6>Bandeja doble con separación.</h6>
+                        </div>
+                        <div class="col s6 m3 mt-1-carrito">
+                            <a class="boton-contador btn-floating btn-small waves-effect waves-light green mc-1">
+                                <i class="material-icons">remove</i>
+                            </a>
+
+                            <span class="small-contador mc-1">1</span>
+
+                            <a class="boton-contador btn-floating btn-small waves-effect waves-light green mc-1">
+                                <i class="material-icons">add</i>
+                            </a>
+                        </div>
+                        <div class="col s6 m3 mt-1-carrito">
+                            <h4 class="">$70</h4>
                         </div>
                     </div>
 
                 </div>
                 <hr>
                 <div class="row">
-                    <div class="col s4 m2">
+                    <div class="col s3 m2">
                         <img src="img/botella.jpg" alt="" class="circle responsive-img">
                     </div>
-                    <div class="col s8 m10">
+                    <div class="col s9 m10">
                         <div class="col s12 m6">
-                            <h3>Botella simple</h3>
+                            <h4>Botella simple</h4>
                             <h6>Botella simple biodegradable.</h6>
                         </div>
-                        <div class="col s6 m3 mt-1-carrito row">
-                            <h5><a class="btn-floating btn waves-effect waves-light green"><i
-                                        class="material-icons">remove</i></a>
-                                <span class="sntador">2</span> <a class="btn-floating btn waves-effect waves-light green"><i
-                                        class="material-icons">add</i></a>
-                            </h5>
+                        <div class="col s6 m3 mt-1-carrito">
+                            <a class="boton-contador btn-floating btn-small waves-effect waves-light green mc-1">
+                                <i class="material-icons">remove</i>
+                            </a>
+
+                            <span class="small-contador mc-1">1</span>
+
+                            <a class="boton-contador btn-floating btn-small waves-effect waves-light green mc-1">
+                                <i class="material-icons">add</i>
+                            </a>
+
 
                         </div>
-                        <div class="col s6 m3">
-                            <h3 class="green-text">$60</h3>
+                        <div class="col s6 m3 mt-1-carrito">
+                            <h4 class="">$60</h4>
                         </div>
                     </div>
                 </div>
                 <hr>
             </article>
             <article class="row">
-                <div class="col s3"></div>
-                <div class="col s9 row">
-                    <div class="col s6">
-                        <p>Envio a Florencio Varela 1903, San Justo</p>
+                <div class="col s6"></div>
+                <div class="col s6 ">
+                    <div class="row">
+                        <div class="col s6">
+                            <h6>Envio a Florencio Varela 1903, San Justo</h6>
+                        </div>
+                        <div class="col s6">
+                            <h6 class="green-text">$ 200</h6>
+                        </div>
                     </div>
-                    <div class="col s6">
-                        <p>$ 200</p>
+                    <div class="row">
+                        <div class="col s6">
+                            <h4>Total con envio: </h4>
+                        </div>
+                        <div class="col s6">
+                            <h4 class="">$430</h4>
+                        </div>
                     </div>
-                    <div class="col s6">
-                        <h4>Total con envio: </h4>
-                    </div>
-                    <div class="col s6">
-                        <h4>$360</h4>
+                    <div class="row">
+                        <div class="col s6">
+                        </div>
+                        <div class="col s6">
+                            <a class="waves-effect waves-green lighten-1 btn green"><i class="material-icons right">shopping_cart
+                            </i>Realizar Compra</a>
+
+                        </div>
                     </div>
                 </div>
+
             </article>
 
         </section>
